#+title: Changelog

All notable changes to this project will be documented in this file.

* Unreleased

* v1.0.0 (2025-12-30)

** Added

- Automatic sidebar refresh on save and idle. Controlled by =vulpea-ui-auto-refresh= (default =t=) and =vulpea-ui-auto-refresh-delay= (default 1.5 seconds).
- Stats widget now reads from buffer instead of disk, enabling live word/char count updates while editing.

* v1.0.0-rc.2 (2025-12-14)

** Added

- New public utility function =vulpea-ui-clean-org-markup= for cleaning org-mode markup from text. Removes/simplifies links, drawers, metadata, and whitespace for display purposes.

** Changed

- Derive =vulpea-ui-sidebar-mode= from =vui-mode= instead of =special-mode=. This enables proper keybinding inheritance and compatibility with packages like [[https://github.com/d12frosted/ace-link-vui][ace-link-vui]].
- Remove custom =TAB= and =RET= bindings from sidebar mode. Widget navigation now uses standard =vui-mode= bindings (=TAB= / =S-TAB= to navigate, =RET= to activate).
- Show cursor in sidebar buffer (previously hidden).

** Fixes

- Fix =vulpea-ui-follow-link-at-point= and =vulpea-ui-widget-toggle-at-point= to use =widget-at= instead of =button-at=.
- Fix widget content not rendering when byte-compiled
- Deduplicate backlink mentions with identical heading path and preview text (e.g., multiple links to the same note in one paragraph)

* v1.0.0-rc.1 (2025-12-12)

First release candidate.

** Features

- Per-frame sidebar with configurable position and size
- Widget system built on [[https://github.com/d12frosted/vui][vui]] components
- Widget registration system with predicates for context-aware display
- Default widgets:
  - *Stats* - character count, word count, link count
  - *Outline* - heading structure with navigation
  - *Backlinks* - notes linking to current note, grouped by heading with context previews
  - *Links* - forward links from current note
- Backlinks features:
  - Group by heading with clickable previews